--- a/css/theme.css
+++ b/css/theme.css
@@ -218,7 +218,7 @@ td.text-right {
 
 /* Preloader */
 .pre-loader {
-	background-color: #fff;
+	background-color: #BAB0EE;
 	width: 100%;
 	height: 100%;
 	position: fixed;
